Bug 173874. Fix tooltip positioning. patch by parish@ntlworld.com, r+sr=roc+moz